# LLVM_10.0_walkthru

./: README.md
cxx_for_novice/: Type_inference_in_cxx.md
experiments/branch_stat/: example.c  example.ll  rtFunc.cpp
experiments/branch_stat/BranchStatPass/: BranchStatPass.cpp
experiments/dynamic_inst_count/: CMakeLists.txt  example.c  rtFunc.cpp
experiments/dynamic_inst_count/CountDynamicInstPass/: CountDynamicInstPass.cpp
experiments/dynamic_inst_count/CountDynamicInstPass-v1/: CMakeLists.txt  CountDynamicInst.cpp  CountDynamicInstPass.cpp
experiments/helloworld/: hello  hello.bc  hello.native  hello.s
experiments/static_inst_count/: CMakeLists.txt  a.out  example.bc  example.ll
experiments/static_inst_count/CountStaticInst/: CMakeLists.txt  CountStaticInstPass.cpp
installation/: README.md
llvm-pass/: README.md
llvm-pass/0_arithmetic_buildup/: ArithmeticBuildup.cpp  CMakeLists.txt
llvm-pass/llvm-tracing/: CMakeLists.txt  README.md  ind.ll  loop.ll  rtlib.c  rtlib.h
llvm-pass/llvm-tracing/benchmarks/: h.ll  h1-reg.ll  h1.ll  h2.ll  heat-2d.c  j.bc  j2d-a.ll  j2d-o.ll  jacobi-1d.c  s-o.ll  s.bc  s.ll  seidel-2d.c  test-reg.ll  zip.bc  zip.c
llvm-pass/llvm-tracing/loop_tracing/: CMakeLists.txt  indvarsimplify.cpp  (+1 more)
llvm-pass/loop_II/: CMakeLists.txt  README.md
llvm-pass/loop_ive/: CMakeLists.txt  Makefile  README.md  ind.ll  loop.c  opt.ll  opt_1.ll  reg_loop.ll
llvm_simple_dse/: CMakeLists.txt  README.md  a.out  dse_test.c  dse_test.ll  exe  opt_dce.ll  opt_reg.ll
llvm_simple_dse/simple_dse/: CMakeLists.txt  Simple_DSE.cpp
(+23 files in other folders)
